--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-	"name": "budget",
-	"version": "0.0.1",
-	"dependencies": {
-		"table-master": "*",
-		"format-number-with-string": "*"
-	}
+  "name": "budget",
+  "version": "0.0.1",
+  "dependencies": {
+    "bar-horizontal": "^0.2.1",
+    "format-number-with-string": "*",
+    "table-master": "*"
+  }
 }
