--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5"
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^18.19.3",
+    "prettier": "3.1.1"
   }
 }
