--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
     "start": "npx tsc ./bin/parse.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "bar-horizontal": "^0.2.1",
+    "commander": "^11.1.0",
+    "csv-parse": "^5.5.3",
+    "date-format-parse": "^0.2.7",
     "format-number-with-string": "*",
+    "object-hash": "^3.0.0",
     "table-master": "*",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
+    "@types/object-hash": "^3.0.6",
     "prettier": "3.1.1"
   }
 }
