Import transactions from Revolut and Monzo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,14 @@
 
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "driver": "SQLite",
+      "name": "DB",
+      "database": "${workspaceFolder:budget}/database.sqlite"
+    }
+  ],
+  "sqltools.useNodeRuntime": true
 }
