--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "budget",
   "version": "0.0.1",
   "scripts": {
-    "start": "npx tsc ./bin/parse.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hublaw/ofx-parser": "^1.1.0",
@@ -12,7 +15,10 @@
     "csv-parse": "^5.5.3",
     "date-format-parse": "^0.2.7",
     "format-number-with-string": "*",
+    "next": "^14.0.4",
     "object-hash": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "table-master": "*",
     "typescript": "^5.3.3"
   },
@@ -20,6 +26,7 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
     "@types/object-hash": "^3.0.6",
+    "@types/react": "^18.2.45",
     "prettier": "3.1.1"
   }
 }
