--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,44 @@
 {
   "compilerOptions": {
     "strict": true,
-    "typeRoots": ["./node_modules/@types", "./src/@types"]
+    "jsx": "preserve",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
+    ],
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src/**/*", "bin/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "bin/**/*",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
