--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
       "database": "${workspaceFolder:budget}/database.sqlite"
     }
   ],
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
   "sqltools.useNodeRuntime": true
 }
