--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@hublaw/ofx-parser": "^1.1.0",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
     "bar-horizontal": "^0.2.1",
     "commander": "^11.1.0",
     "csv-parse": "^5.5.3",
     "date-format-parse": "^0.2.7",
     "format-number-with-string": "*",
+    "framer-motion": "^10.16.16",
     "next": "^14.0.4",
     "object-hash": "^3.0.0",
     "react": "^18.2.0",
@@ -27,6 +29,10 @@
     "@types/node": "^18.19.3",
     "@types/object-hash": "^3.0.6",
     "@types/react": "^18.2.45",
-    "prettier": "3.1.1"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.4.0"
   }
 }
