--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0"
   }
 }
