--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@hublaw/ofx-parser": "^1.1.0",
     "@nextui-org/react": "^2.2.9",
+    "@pothos/core": "^3.41.0",
+    "@pothos/plugin-prisma": "^3.63.0",
+    "@pothos/plugin-prisma-utils": "^0.14.0",
     "@prisma/client": "^5.7.1",
     "bar-horizontal": "^0.2.1",
     "commander": "^11.1.0",
@@ -17,8 +20,12 @@
     "date-format-parse": "^0.2.7",
     "format-number-with-string": "*",
     "framer-motion": "^10.16.16",
+    "graphql": "^16.8.1",
+    "graphql-scalars": "^1.22.4",
+    "graphql-yoga": "^5.1.0",
     "next": "^14.0.4",
     "object-hash": "^3.0.0",
+    "prettier-plugin-prisma": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "table-master": "*",
@@ -32,6 +39,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0"
