--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.63.0",
     "@pothos/plugin-prisma-utils": "^0.14.0",
+    "@pothos/plugin-relay": "^3.45.1",
     "@prisma/client": "^5.7.1",
     "bar-horizontal": "^0.2.1",
     "commander": "^11.1.0",
