Add eslint, relay

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "budget",
   "version": "0.0.1",
   "scripts": {
+    "relay": "relay-compiler",
+    "schema": "npx ts-node ./app/scripts/schema.ts",
+    "import": "npx ts-node ./app/scripts/import.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -15,34 +18,45 @@
     "@pothos/plugin-prisma-utils": "^0.14.0",
     "@pothos/plugin-relay": "^3.45.1",
     "@prisma/client": "^5.7.1",
-    "bar-horizontal": "^0.2.1",
     "commander": "^11.1.0",
     "csv-parse": "^5.5.3",
     "date-format-parse": "^0.2.7",
     "format-number-with-string": "*",
     "framer-motion": "^10.16.16",
-    "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
     "graphql-yoga": "^5.1.0",
     "next": "^14.0.4",
     "object-hash": "^3.0.0",
-    "prettier-plugin-prisma": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "table-master": "*",
-    "typescript": "^5.3.3"
+    "react-relay": "^16.1.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
     "@types/object-hash": "^3.0.6",
     "@types/react": "^18.2.45",
+    "@types/react-relay": "^16.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "autoprefixer": "^10.4.16",
+    "babel": "^6.23.0",
+    "babel-plugin-relay": "^16.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-relay": "^1.8.3",
+    "graphql": "^16.8.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-prisma": "^5.0.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.1",
-    "tailwindcss": "^3.4.0"
+    "relay-compiler": "^16.1.0",
+    "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
