--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@app/*": ["app/*"],
-      "@components/*": ["app/components/*"]
+      "@/*": ["app/*"]
     },
     "strict": true,
     "jsx": "preserve",
     "typeRoots": ["./node_modules/@types", "./src/@types"],
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
