--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@pothos/plugin-prisma-utils": "^0.14.0",
     "@pothos/plugin-relay": "^3.45.1",
     "@prisma/client": "^5.7.1",
+    "@react-hook/resize-observer": "^1.2.6",
     "@react-stately/data": "^3.11.0",
     "commander": "^11.1.0",
     "csv-parse": "^5.5.3",
     "date-format-parse": "^0.2.7",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "format-number-with-string": "*",
     "framer-motion": "^10.16.16",
     "graphql-scalars": "^1.22.4",
