--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/use-infinite-scroll": "^2.1.2",
     "@pothos/core": "^3.41.0",
+    "@pothos/plugin-errors": "^3.11.1",
     "@pothos/plugin-prisma": "^3.63.0",
     "@pothos/plugin-prisma-utils": "^0.14.0",
     "@pothos/plugin-relay": "^3.45.1",
@@ -34,6 +35,7 @@
     "object-hash": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-relay": "^16.1.0"
   },
   "devDependencies": {
