--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.7.1",
     "@react-hook/resize-observer": "^1.2.6",
     "@react-stately/data": "^3.11.0",
+    "chroma-js": "^2.4.2",
     "commander": "^11.1.0",
     "csv-parse": "^5.5.3",
     "date-format-parse": "^0.2.7",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "@types/chroma-js": "^2.4.3",
     "@types/node": "^18.19.3",
     "@types/object-hash": "^3.0.6",
     "@types/react": "^18.2.45",
