--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-relay": "^16.1.0"
+    "react-relay": "^16.1.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
