--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
   },
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "*.config.js", ".eslintrc.js"]
 }
