--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@pothos/plugin-prisma": "^3.63.0",
     "@pothos/plugin-prisma-utils": "^0.14.0",
     "@pothos/plugin-relay": "^3.45.1",
+    "@pothos/plugin-simple-objects": "^3.7.0",
     "@prisma/client": "^5.7.1",
     "@react-hook/resize-observer": "^1.2.6",
     "@react-stately/data": "^3.11.0",
