--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@prisma/client": "^5.7.1",
     "@react-hook/resize-observer": "^1.2.6",
     "@react-stately/data": "^3.11.0",
+    "@types/react-dom": "^18.3.0",
     "chroma-js": "^2.4.2",
     "commander": "^11.1.0",
     "csv-parse": "^5.5.3",
     "date-format-parse": "^0.2.7",
-    "echarts": "^5.4.3",
+    "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "format-number-with-string": "*",
     "framer-motion": "^10.16.16",
