--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "framer-motion": "^10.16.16",
     "graphql-scalars": "^1.22.4",
     "graphql-yoga": "^5.1.0",
-    "next": "^14.2.10",
+    "next": "^14.2.15",
     "object-hash": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
     "react-relay": "^16.1.0",
+    "relay-nextjs": "^3.0.1",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
