Switch from npm to pnpm and bump packages version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "budget",
   "version": "0.0.1",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "relay": "relay-compiler && npm run lint",
     "schema": "npx ts-node ./app/scripts/schema.ts && npx prettier app/graphql/schema.graphql --write",
     "import": "npx ts-node ./app/scripts/import.ts",
@@ -13,71 +14,73 @@
   "dependencies": {
     "@hublaw/ofx-parser": "^1.1.0",
     "@nextui-org/react": "^2.4.8",
-    "@nextui-org/use-infinite-scroll": "^2.1.2",
-    "@pothos/core": "^3.41.0",
-    "@pothos/plugin-errors": "^3.11.1",
-    "@pothos/plugin-prisma": "^3.63.0",
-    "@pothos/plugin-prisma-utils": "^0.14.0",
-    "@pothos/plugin-relay": "^3.45.1",
-    "@pothos/plugin-simple-objects": "^3.7.0",
-    "@prisma/client": "^5.7.1",
+    "@nextui-org/use-infinite-scroll": "^2.1.5",
+    "@pothos/core": "^3.41.2",
+    "@pothos/plugin-errors": "^3.11.2",
+    "@pothos/plugin-prisma": "^3.65.3",
+    "@pothos/plugin-prisma-utils": "^0.14.1",
+    "@pothos/plugin-relay": "^3.46.1",
+    "@pothos/plugin-simple-objects": "^3.7.1",
+    "@prisma/client": "^5.22.0",
     "@react-hook/resize-observer": "^1.2.6",
-    "@react-stately/data": "^3.11.0",
-    "@types/react-dom": "^18.3.0",
-    "chroma-js": "^2.4.2",
+    "@react-stately/data": "^3.12.0",
+    "@types/react-dom": "^18.3.1",
+    "chroma-js": "^2.6.0",
     "commander": "^11.1.0",
-    "csv-parse": "^5.5.3",
+    "csv-parse": "^5.6.0",
     "date-format-parse": "^0.2.7",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
-    "format-number-with-string": "*",
-    "framer-motion": "^10.16.16",
-    "graphql-scalars": "^1.22.4",
-    "graphql-yoga": "^5.1.0",
-    "next": "^14.2.10",
+    "format-number-with-string": "^0.0.2",
+    "framer-motion": "^10.18.0",
+    "graphql-scalars": "^1.24.0",
+    "graphql-yoga": "^5.10.4",
+    "next": "^14.2.19",
     "object-hash": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
-    "react-relay": "^16.1.0",
-    "usehooks-ts": "^2.9.1"
+    "react-relay": "^18.2.0",
+    "relay-runtime": "^18.2.0",
+    "usehooks-ts": "^2.16.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.0.4",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/chroma-js": "^2.4.3",
-    "@types/node": "^18.19.3",
+    "@next/eslint-plugin-next": "^14.2.19",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/chroma-js": "^2.4.4",
+    "@types/node": "^18.19.67",
     "@types/object-hash": "^3.0.6",
-    "@types/react": "^18.2.45",
-    "@types/react-relay": "^16.0.5",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "autoprefixer": "^10.4.16",
+    "@types/react": "^18.3.12",
+    "@types/react-relay": "^16.0.6",
+    "@types/relay-runtime": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.20",
     "babel": "^6.23.0",
-    "babel-plugin-relay": "^16.1.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.3",
+    "babel-plugin-relay": "^18.2.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.19",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.5.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-perfectionist": "^2.11.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-relay": "^1.8.3",
-    "graphql": "^16.8.1",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
+    "graphql": "^16.9.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-prisma": "^5.0.0",
-    "prettier-plugin-sql": "^0.18.0",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.18.0",
-    "relay-compiler": "^16.1.0",
-    "tailwindcss": "^3.4.0",
+    "prettier-plugin-sql": "^0.18.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^5.22.0",
+    "relay-compiler": "^18.2.0",
+    "tailwindcss": "^3.4.15",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   }
 }
