--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
     "react-relay": "^18.2.0",
+    "relay-nextjs": "^3.0.1",
     "relay-runtime": "^18.2.0",
     "usehooks-ts": "^2.16.0"
   },
